# libcv

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  README.md  index.html  params.json
examples/: image.cpp  kdtree.cpp  linalg.cpp  matrix.cpp  vector.cpp
include/: array.hpp  atomic.hpp  bpg.hpp  bpq.hpp  cminpack.h  cminpack.hpp  contour.hpp  draw.hpp  fwd.hpp  gui.hpp  image.hpp  improc.hpp  indexarray.hpp  io.hpp  iterator.hpp  kdtree.hpp  linalg.hpp  matfunc.hpp  math.hpp  matrix.hpp  optimization.hpp  parallelization.hpp  rangefunc.hpp  region.hpp  vector.hpp
src/: cminpack.c  cminpack.cpp  gui.cpp  image.cpp  improc.cpp  indexarray.cpp  io.cpp  linalg.cpp  math.cpp  optimization.cpp
test/: test.cpp
